SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}


Enhancements:


SQL Scripts Plugin: Added the capability to "store the execution result of an SQL query into file". This 
  allows the user to store the result of the selected SQL directly into a file, instead of displaying it in 
  a result table. This is avaiable in the tools pop-up (sql2file) and the menu 
  (Session ==> Scripts ==> Store result of SQL in file).
  
  
DBCopy Plugin: (Feature request #3291501) This plugin now has a command-line interface (via DBCopyCLI).  See
               DBCopy plugin documentation for usage details.

Syntax Plugin:
  Ostermiller and Netbeans editors were removed. Users that still used these editors are automatically
  switched to the RSyntax editor.

MSSQL Plugin:
  - Added display of triggers source code.
  - If two views with same name in different schemas exist now the views' source code is
    displayed correctly according to the selected Object tree node.
  Thanks to damluar for the patch (Patch ID: 3310900)


New Plugin: Greenplum DB Plugin
  New Plugin for the Greenplum DB. Thanks to Adam Winn for the patch (Patch ID 3217167)


Feature Request 1744964: Copy text from the SQL editor panel as rich text. 
	This functionality is available via the pop-up menu and the tools pop-up. Additionally this mode can be 
	activated for copy shortcuts. 
	See: Session Properties => Syntax => Copy shortcuts use the "Rich Text Format"
	To use this, the RSyntax editor (Syntax Plugin) must be activated.

Source Tabs:
	Syntax highlighting is used for displaying the source of database objects, if the syntax plugin is installed.

Query Builder / New features in Graph plugin:
   The Query Builder is part of the Graph plugin. That means besides the former default and Zoom/Print modes
   Query Builder is a new mode of the Graph Plugin. Any existing Graph can be switched to the new mode.