@@ -53,3 +53,4 @@ Version.appname=SQuirreL SQL Client
 Version.copyright=Copyright (c) 2001-2011 \nColin Bell, Gerd Wagner, Rob Manning and others
 Version.website=http://www.squirrelsql.org
 
+OutOfMemoryErrorHandler.message=Due running out of memory, we have closed all result tabs of all sessions. Please save your work and restart SQuirreL SQL.
